--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,62 @@
 {
-    "require": {
-        "php": "^8.0",
-        "twig/twig": "^3.0",
-        "phpmailer/phpmailer": "^6.8",
-        "vlucas/phpdotenv": "^5.6",
-        "nikic/fast-route": "^1.3",
-        "matthiasmullie/minify": "^1.3",
-        "predis/predis": "^2.3",
-        "symfony/rate-limiter": "^7.2",
-        "symfony/security-csrf": "^7.2",
-        "symfony/messenger": "^7.2",
-        "intervention/image": "^3.11",
-        "cloudinary/cloudinary_php": "^3.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/App/",
-            "Core\\": "src/Core/",
-            "Infrastructure\\": "src/Infrastructure/",
-            "Repositories\\": "src/Repositories/",
-            "Controller\\": "src/Controller/",
-            "Middleware\\": "src/Middleware/",
-            "Src\\": "src/",
-            "Services\\": "src/Services/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^6.0"
-    },
-    "scripts": {
-        "test": "phpunit"
+  "require": {
+    "php": "^8.0",
+    "twig/twig": "^3.0",
+    "phpmailer/phpmailer": "^6.8",
+    "vlucas/phpdotenv": "^5.6",
+    "nikic/fast-route": "^1.3",
+    "matthiasmullie/minify": "^1.3",
+    "predis/predis": "^2.3",
+    "symfony/rate-limiter": "^7.2",
+    "symfony/security-csrf": "^7.2",
+    "symfony/messenger": "^7.2",
+    "intervention/image": "^3.11",
+    "cloudinary/cloudinary_php": "^3.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/App/",
+      "Core\\": "src/Core/",
+      "Infrastructure\\": "src/Infrastructure/",
+      "Repositories\\": "src/Repositories/",
+      "Controller\\": "src/Controller/",
+      "Middleware\\": "src/Middleware/",
+      "Src\\": "src/",
+      "Services\\": "src/Services/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "symfony/var-dumper": "^6.0"
+  },
+  "scripts": {
+    "test": "phpunit --colors=always",
+    "clean": [
+      "@php -r \"array_map('unlink', glob('var/cache/*.php'));\"",
+      "@php -r \"array_map('unlink', glob('var/log/*.log'));\""
+    ],
+    "build-assets": [
+      "npm ci",
+      "npm run build"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=public --ansi"
+    ],
+    "serve": "php -S localhost:8000 -t public",
+    "deploy": [
+      "@composer install --no-dev --optimize-autoloader",
+      "@composer run-script build-assets",
+      "@php bin/console doctrine:migrations:migrate --no-interaction",
+      "@php bin/console cache:clear --env=prod",
+      "@php bin/console cache:warmup --env=prod"
+    ]
+  }
 }
