--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "phpmailer/phpmailer": "^6.8",
     "vlucas/phpdotenv": "^5.6",
     "nikic/fast-route": "^1.3",
-    "matthiasmullie/minify": "^1.3",
+    "matthiasmullie/minify": "*",
     "predis/predis": "^2.3",
     "symfony/rate-limiter": "^7.2",
     "symfony/security-csrf": "^7.2",
