--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "symfony/messenger": "^7.2",
     "intervention/image": "^3.11",
     "cloudinary/cloudinary_php": "^3.1",
-    "google/apiclient": "*"
+    "google/apiclient": "*",
+    "cboden/ratchet": "*"
   },
   "autoload": {
     "psr-4": {
