--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "php": "^8.0",
     "twig/twig": "^3.0",
     "phpmailer/phpmailer": "^6.8",
-    "vlucas/phpdotenv": "^5.6",
+    "vlucas/phpdotenv": "*",
     "nikic/fast-route": "^1.3",
     "matthiasmullie/minify": "*",
     "predis/predis": "^2.3",
